k8s/web-app-deployment.yaml
# web-app-deployment.yaml
# 說明：此檔案定義了 Python Web 應用程式的 Deployment。

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-pgsql-on-k8s-web-app-deployment
spec:
  replicas: 1 # 運行 1 個應用程式副本
  selector:
    matchLabels:
      app: deploy-pgsql-on-k8s-python-web-app # 找到標籤為 "app: deploy-pgsql-on-k8s-python-web-app" 的 Pod
  template:
    metadata:
      labels:
        app: deploy-pgsql-on-k8s-python-web-app # 為新建立的 Pod 加上此標籤
    spec:
      containers:
      - name: deploy-pgsql-on-k8s-python-web-app # 容器名稱
        image: deploy-pgsql-on-k8s-python-web-app:latest # 使用的 Docker 映像檔名稱。
        imagePullPolicy: Never # 設定映像檔拉取策略。
        # Never：表示永遠不從遠端倉庫拉取，只使用節點上已存在的本地映像檔。這在本地開發時非常有用。
        # Always：(預設值) 每次建立 Pod 都會嘗試拉取最新映像檔。
        # IfNotPresent：如果本地不存在該映像檔，則從遠端拉取。
        ports:
        - containerPort: 5000 # 應用程式容器內部監聽的埠號 (對應 app.py 中的設定)
